--- a/index.html
+++ b/index.html
@@ -42,15 +42,7 @@
         fixed-top
       "
     >
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img
-            src="images/mylogo.jpg"
-            alt="Avatar Logo"
-            style="width: 75px"
-            class="rounded-pill"
-          />
-        </a>
+      <div class="container-fluid"
         <button
           class="navbar-toggler"
           type="button"
