--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
       "
     >
       <div class="container-fluid"
+        <a class="navbar-brand" href="#">
+          <img
+            src="images/mylogo.jpg"
+            alt="Avatar Logo"
+            style="width: 75px"
+            class="rounded-pill"
+          />
+        </a>
         <button
           class="navbar-toggler"
           type="button"
